# openera

./: .envrc  .gitignore  LICENSE  README.rst  configure.sh  docker-compose.yml  flake.nix
client/: .gitignore  README.md  README.rst  package-lock.json  package.json  tsconfig.json
client/patches/: dagre+0.8.5.patch
client/public/: index.html
client/src/: Root.tsx  index.tsx
client/src/app/: AppLoader.tsx  Schema.ts  Server.ts  Store.ts  Util.tsx
client/src/components/: AppContent.tsx  ButtonBar.tsx  DialogManager.tsx  JsonTree.tsx  SchemaLibraryMenu.tsx
client/src/components/diagram/: ContextMenu.tsx  Diagram.tsx  Edge.tsx  Layout.ts  Loader.ts  Node.tsx  Store.ts
client/src/components/dialogs/: ListEditor.tsx  Search.tsx
client/src/css/: App.css  Induction.css  Modal.css  SchemaLibraryMenu.css  context-menu.css  node.css
client/src/induction/: App.tsx  JobInfo.tsx  NewJob.tsx  Types.ts
client/src/types/: Sdf.ts  Types.ts
docs/: client.rst  conf.py  index.rst  nix.rst  pyproject.toml  sdf-types.rst
docs/server/: config.rst  db.rst  index.rst  resources.rst  sdf.rst  server.rst  util.rst
nginx/: nginx.conf
nix/: apps.nix  docker.nix  packages.nix  shell.nix
sdf-types/: README.rst  generate_types.py  pyproject.toml  sdf.type.yaml
server/: .gitignore  README.rst  mypy.ini  pyproject.toml  run.sh
server/openera/: config.py  db.py  generate_ontology.py  resources.py  server.py  util.py
server/sdf-config/: faers.event.json
server/tests/: test_config.py  test_util.py
util/: eratosthenes.service
