[tool.poetry]
name = "openera-docs"
version = "0.1.0"
description = ""
authors = ["Brendon Boldt <bboldt@cs.cmu.edu>"]
packages = [
  { include = "*" },
]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
