[tool.poetry]
name = "openera-api-server"
version = "0.1.0"
description = ""
authors = ["Brendon Boldt <bboldt@cs.cmu.edu>"]
packages = [
  { include = "openera" },
]

[tool.poetry.dependencies]
falcon = "2.0"
gunicorn = "20.1.0"
python = "^3.9"
requests = "2.31"
pydantic = "^1.10.4"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^1.4.1"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
